# Arcade

./: .clang-format  .clang-tidy  .gitignore  Arcade.cpp  Arcade.hpp  CMakeLists.txt  Core.hpp  README.md  State.cpp  arcade  core.cpp  core.hpp  justfile  main.cpp  tests.cpp
AGame/: AGame.cpp  AGame.hpp  Arcade.cpp  Arcade.hpp  CMakeLists.txt  Core.cpp  Core.hpp  IGame.cpp  IGame.hpp
ArcadeCore/: Arcade.cpp  Arcade.hpp  CMakeLists.txt  Core.cpp  Core.hpp
Centipede/: CMakeLists.txt  Centipede.cpp  Centipede.hpp
Error/: CMakeLists.txt  Error.cpp  Error.hpp
Games/: IGame.hpp
Games/Centipede/: CMakeLists.txt  Centipede.cpp  Centipede.hpp
Games/Nibbler/: CMakeLists.txt  Nibbler.cpp  Nibbler.hpp
Games/Nibbler/map/: basic.txt  complex.txt  empty.txt  loop.txt  withholes.txt
Games/Score/: score.txt
Graphics/IWindow/: AShape.cpp  AShape.hpp  CMakeLists.txt  IWindow.hpp  Shape.cpp  Shape.hpp  Text.hpp  Utils.cpp
Graphics/Ncurse/: CMakeLists.txt  NcWindow.cpp  NcWindow.hpp
Graphics/SDL2/: CMakeLists.txt  SDLWindow.cpp  SDLWindow.hpp
Graphics/SFML/: CMakeLists.txt  SfWindow.cpp  SfWindow.hpp
IGraphic/: AShape.cpp  AShape.hpp  ASound.hpp  ASprite.hpp  AWindow.cpp  AWindow.hpp  CMakeLists.txt  IWindow.hpp  State.cpp  State.hpp  Text.cpp  Text.hpp  Utils.cpp  Utils.hpp
Igame/: Igame.hpp
Igraphic/: AShape.cpp  AShape.hpp  AText.hpp  Agraphic.hpp  Asound.hpp  Asprite.hpp  Awindow.hpp  CMakeLists.txt  Core.hpp  IdrawnShape.hpp  IdrawnText.hpp  Isound.hpp  Isprite.hpp  Shape.cpp  Shape.hpp  State.cpp  State.hpp
Ilibrairy/: Ilibrairy.hpp
Ilibrairy/Event/: Event.cpp  Event.hpp  EventManager.hpp
Loader/: CMakeLists.txt  Loader.cpp  Loader.hpp
Ncurse/: CMakeLists.txt  CmakeLists.txt  NcWindow.cpp  NcWindow.hpp
SDL2/: CMakeLists.txt  SDLWindow.cpp  SDLWindow.hpp
SFML/: CMakeLists.txt  SfWindow.cpp  SfWindow.hpp
Sfml/: CMakeLists.txt  SfGraphic.cpp  SfGraphic.hpp  SfWindow.cpp  SfWindow.hpp
doc/: AShape.md  Core.md  IGame.md  IWindow.md  Shape.md
